Added homepage url

--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "homepage": "https://katerinamakri.github.io/quote-machine/",
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
   }
 }
